force-app/main/default/objects/ExerciseMaster__c/ExerciseMaster__c.object-meta.xml
<CustomObject>
    <description>自宅で実施できる自重トレーニング種目のマスタ。Agentforceが種目説明・やり方・注意点を説明する際に参照する。</description>
<enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi>
    <label>種目マスタ</label><nameField><label>種目名</label><type>Text</type></nameField><pluralLabel>種目マスタ</pluralLabel><sharingModel>ReadWrite</sharingModel>
</CustomObject>