force-app/main/default/objects/ExerciseMaster__c/fields/BeginnerAlternative__c.field-meta.xml
<CustomField><fullName>BeginnerAlternative__c</fullName><externalId>false</externalId><label>初心者向け代替種目</label><length>255</length><required>false</required><type>Text</type><unique>false</unique></CustomField>