force-app/main/default/objects/ExerciseMaster__c/fields/CommonMistakes__c.field-meta.xml
<CustomField><fullName>CommonMistakes__c</fullName><label>よくある失敗</label><length>32768</length><type>LongTextArea</type><visibleLines>5</visibleLines></CustomField>