force-app/main/default/objects/ExerciseMaster__c/fields/EffectiveFeeling__c.field-meta.xml
<CustomField><fullName>EffectiveFeeling__c</fullName><label>効いている感覚</label><length>32768</length><type>LongTextArea</type><visibleLines>5</visibleLines></CustomField>