force-app/main/default/objects/ExerciseMaster__c/fields/EstimatedMinutes__c.field-meta.xml
<CustomField><fullName>EstimatedMinutes__c</fullName><label>所要時間目安_分</label><precision>3</precision><required>false</required><scale>0</scale><type>Number</type></CustomField>