force-app/main/default/objects/ExerciseMaster__c/fields/HowTo__c.field-meta.xml
<CustomField><fullName>HowTo__c</fullName><label>やり方</label><length>32768</length><type>LongTextArea</type><visibleLines>8</visibleLines></CustomField>