force-app/main/default/objects/ExerciseMaster__c/fields/PainCaution__c.field-meta.xml
<CustomField><fullName>PainCaution__c</fullName><label>痛みがある場合の注意</label><length>32768</length><type>LongTextArea</type><visibleLines>5</visibleLines></CustomField>