force-app/main/default/objects/ExerciseMaster__c/fields/SourceCheckedDate__c.field-meta.xml
<CustomField><fullName>SourceCheckedDate__c</fullName><label>最終確認日</label><required>false</required><type>Date</type></CustomField>