force-app/main/default/objects/ExerciseMaster__c/fields/SourceName__c.field-meta.xml
<CustomField><fullName>SourceName__c</fullName><externalId>false</externalId><label>出典名</label><length>255</length><required>false</required><type>Text</type><unique>false</unique></CustomField>