force-app/main/default/objects/ExerciseMaster__c/fields/SourceUrl__c.field-meta.xml
<CustomField><fullName>SourceUrl__c</fullName><label>出典URL</label><required>false</required><type>Url</type></CustomField>