force-app/main/default/objects/ExerciseMaster__c/fields/TargetBodyPart__c.field-meta.xml
<CustomField><fullName>TargetBodyPart__c</fullName><label>対象部位</label><required>false</required><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>胸</fullName><default>false</default><label>胸</label></value><value><fullName>腕</fullName><default>false</default><label>腕</label></value><value><fullName>肩</fullName><default>false</default><label>肩</label></value><value><fullName>背中</fullName><default>false</default><label>背中</label></value><value><fullName>お腹</fullName><default>false</default><label>お腹</label></value><value><fullName>脚</fullName><default>false</default><label>脚</label></value><value><fullName>お尻</fullName><default>false</default><label>お尻</label></value><value><fullName>全身</fullName><default>false</default><label>全身</label></value></valueSetDefinition></valueSet></CustomField>